--- a/electronics/src/components/Navbar/navbar.css
+++ b/electronics/src/components/Navbar/navbar.css
@@ -315,10 +315,10 @@
 }
 
 .gjithaKategorite-logoBtn button {
-  padding: 10px;
+  padding: 6px;
   border: none;
   border-radius: 50%;
-  background-color: transparent;
+  margin: 4px;
   color: black;
 }
 
@@ -369,8 +369,6 @@
   background: #f4f4f4;
   padding: 25px 30px;
   list-style: none;
-  visibility: hidden;
-  opacity: 0;
 }
 
 .kategori-GlobeShops-rekomandon li {
