--- a/electronics/src/components/Home-page/FirstComponent/Slider.css
+++ b/electronics/src/components/Home-page/FirstComponent/Slider.css
@@ -106,7 +106,7 @@
 .butonat-e-kontrolluesit {
   text-align: end;
   padding: 20px 0;
-  margin-right: 50px;
+  margin-right: 2% ;
 }
 
 .butonat-e-kontrolluesit > button {
