--- a/electronics/src/components/Home-page/FirstComponent/Slider.css
+++ b/electronics/src/components/Home-page/FirstComponent/Slider.css
@@ -19,7 +19,7 @@
   grid-auto-flow: column;
   grid-auto-columns: calc((98% / 3) - 1%);
   align-items: center;
-  gap: 20px;
+  gap: 10px;
   overflow: hidden;
   overflow-x: auto;
   scroll-snap-type: x mandatory;
@@ -54,12 +54,12 @@
 }
 
 .kartaMadhe {
+  width: 95%;
   display: flex;
   flex-direction: column;
   border: solid 1px rgb(182, 182, 182);
   border-radius: 1rem;
   cursor: pointer;
-  overflow: hidden;
   scroll-snap-align: start;
 }
 
