--- a/electronics/src/components/Home-page/TwelveComponent/CardsInfo.css
+++ b/electronics/src/components/Home-page/TwelveComponent/CardsInfo.css
@@ -1,4 +1,4 @@
-.mbeshtjellesi-kartave{
+.mbeshtjellesi-kartave-home{
   padding: 0 7%;
   overflow-x: auto;
   scroll-snap-type: x mandatory;
@@ -6,7 +6,7 @@
   /* scrollbar-width: 0; */
 }
 
-.kartat-e-medha {
+.kartat-e-medha-home {
   display: grid;
   grid-auto-flow: column;
   grid-auto-columns: calc((98% / 3) - 1%);
@@ -20,7 +20,7 @@
   scroll-snap-align: start;
 }
 
-.kartaMadhe {
+.kartaMadhe-home {
   display: flex;
   flex-direction: column;
   border: solid 3px rgb(182, 182, 182);
@@ -30,22 +30,22 @@
   scroll-snap-align: start;
 }
 
-.kartaMadhe-foto > img {
+.kartaMadhe-foto-home > img {
   width: 100%;
 }
 
-.kartaMadhe-kutiaInfos {
+.kartaMadhe-kutiaInfos-home {
   padding: 10px;
   background-color: white;
 }
 
-.kartaMadhe-info {
+.kartaMadhe-info-home {
   display: flex;
   gap: 5px;
   padding: 0 10px;
 }
 
-.kartaMadhe-info > p {
+.kartaMadhe-info-home > p {
   border: 1px solid #007fa4;
   border-radius: 1rem;
   padding: 3px 5px;
@@ -53,18 +53,18 @@
   color: rgb(53, 53, 53);
 }
 
-.kartaMadhe-infoDyte > p {
+.kartaMadhe-infoDyte-home > p {
   font-size: 1rem;
   font-stretch: expanded;
   color: rgb(53, 53, 53);
 }
 
-.kartaMadhe-infoDyte > h4 {
+.kartaMadhe-infoDyte-home > h4 {
   font-size: 0.9rem;
   font-weight: 700;
 }
 
-.kartaMadhe-infoDyte > h3 {
+.kartaMadhe-infoDyte-home2 > h3 {
   font-weight: 900;
   font-size: 1.6rem;
   font-style: oblique;
