--- a/electronics/src/components/Home-page/FirstComponent/KartatChild.css
+++ b/electronics/src/components/Home-page/FirstComponent/KartatChild.css
@@ -1,5 +1,6 @@
-.kartaMadhe {
+.kartaMadhe-current {
   width: 95%;
+  height: 550px;
   display: flex;
   flex-direction: column;
   border: solid 1px rgb(182, 182, 182);
@@ -8,41 +9,45 @@
   scroll-snap-align: start;
 }
 
-.kartaMadhe-foto > img {
-  width: 100%;
+.kartaMadhe-foto-current {
+  padding: 4px;
 }
 
-.kartaMadhe-kutiaInfos {
+.kartaMadhe-foto-current > img {
+    width: 100%;
+}
+
+.kartaMadhe-kutiaInfos-current {
   padding: 10px;
   background-color: white;
 }
 
-.kartaMadhe-info {
+.kartaMadhe-info-current {
   display: flex;
   gap: 5px;
   padding: 0 10px;
 }
 
-.kartaMadhe-info > p {
+.kartaMadhe-info-current > p {
   border: 1px solid #007fa4;
   border-radius: 1rem;
-  padding: 3px 5px;
+  padding: 3px 25px;
   font-size: 0.7rem;
   color: rgb(53, 53, 53);
 }
 
-.kartaMadhe-infoDyte > p {
+.kartaMadhe-infoDyte-current > p {
   font-size: 1rem;
   font-stretch: expanded;
   color: rgb(53, 53, 53);
 }
 
-.kartaMadhe-infoDyte > h4 {
+.kartaMadhe-infoDyte-current > h4 {
   font-size: 0.9rem;
   font-weight: 700;
 }
 
-.kartaMadhe-infoDyte > h3 {
+.kartaMadhe-infoDyte-current > h3 {
   font-weight: 900;
   font-size: 1.6rem;
   font-style: oblique;
