--- a/electronics/src/components/Home-page/Navbar/navbar.css
+++ b/electronics/src/components/Home-page/Navbar/navbar.css
@@ -257,6 +257,7 @@
   overflow: hidden;
   margin: 0;
   width: 15%;
+  height: 94vh;
   padding: 30px;
   color: rgb(39, 39, 39);
   background-color: #f4f4f4;
