--- a/electronics/src/components/Home-page/FirstComponent/Slider.css
+++ b/electronics/src/components/Home-page/FirstComponent/Slider.css
@@ -1,18 +1,15 @@
 
 /* <!-- KARTA MADHE --> */
-.mbeshtjellesi-kartave,
-.seksioni-plani-pare {
-  padding: 0 7%;
+/* .mbeshtjellesi-kartave-slider{
   overflow-x: auto;
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
-  /* scrollbar-width: 0; */
-}
+} */
 
-.mbeshtjellesi-kartave::-webkit-scrollbar,
+/* .mbeshtjellesi-kartave-slider::-webkit-scrollbar,
 .seksioni-plani-pare::-webkit-scrollbar {
   display: none;
-}
+} */
 
 .kartat-e-medha-current {
   display: grid;
@@ -28,33 +25,24 @@
   scroll-snap-align: start;
 }
 
-.backgroundi-karta-klub {
-  background-color: darkslategrey;
-  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(50px);
-  border: 2px solid rgba(255, 255, 255, 0.1);
-  border-radius: 10px;
-  padding: 1% 3%;
-}
-
 .kartat-e-medha-current a {
   text-decoration: none;
   color: black;
 }
 
-.butonat-e-kontrolluesit {
+.butonat-e-kontrolluesit-slideri {
   text-align: end;
   padding: 20px 0;
-  margin-right: 2% ;
+  /* margin-right: 2% ; */
 }
 
-.butonat-e-kontrolluesit > button {
+.butonat-e-kontrolluesit-slideri > button {
   padding: 8px 10px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
 }
 
-.butonat-e-kontrolluesit > button:hover {
+.butonat-e-kontrolluesit-slideri > button:hover {
   background-color: #616161;
 }
