--- a/electronics/src/components/Home-page/Navbar/navbar.css
+++ b/electronics/src/components/Home-page/Navbar/navbar.css
@@ -256,6 +256,8 @@
   position: absolute;
   overflow: hidden;
   margin: 0;
+  left: 0px;
+  top: 0px;
   width: 15%;
   height: 94vh;
   padding: 30px;
@@ -323,31 +325,9 @@
   color: black;
 }
 
-.perdja-zeze {
-  width: 100%;
-  height: 975px;
-  background: #1a1a1a;
-  overflow: hidden;
-  position: absolute;
-  opacity: 80%;
-  visibility: hidden;
-  opacity: 0;
-}
 
-.hapPopUpMbeshtjellsi {
-  visibility: visible;
-  opacity: 1;
-  background-color: #3a86ff;
-  height: auto;
-  height: 94vh;
-}
 
-/* bacgroundi i zi te hapja e pop up-it */
-.hapPopUpPerdja {
-  visibility: visible;
-  opacity: 1;
-  opacity: 80%;
-}
+
 
 .hr {
   opacity: 90%;
@@ -399,6 +379,7 @@
   visibility: hidden;
   opacity: 0;
   transition: 0.5s;
+  top: 0px;
 }
 
 .ZgjidhDyqanin-Popup {
@@ -447,44 +428,11 @@
   border-radius: 10px;
 }
 
-.hr-ZgjidhDyqanin {
-  margin-top: 100%;
-  color: rgb(229, 229, 229);
-}
 
-.dyqaniZgjedhur-btn {
-  font-size: 1rem;
-  font-weight: 600;
-  width: 25%;
-  padding: 19px 0;
-  color: white;
-  background-color: black;
-  border-radius: 10px;
-  border: none;
-  float: right;
-}
 
-.hapPopUpZgjidhDyqanin {
-  visibility: visible;
-  opacity: 1;
-}
 
-.perdja-zeze-zgjidhDyqani {
-  width: 99%;
-  height: 975px;
-  background: #1a1a1a;
-  overflow: hidden;
-  position: absolute;
-  opacity: 80%;
-  visibility: hidden;
-  opacity: 0;
-}
 
-.hapPerdja-Zeze-ZgjidhDyqanin {
-  visibility: visible;
-  opacity: 1;
-  opacity: 90%;
-}
+
 
 
 body {
