--- a/electronics/src/components/Products-page/SecondComponent/CardsComponent.css
+++ b/electronics/src/components/Products-page/SecondComponent/CardsComponent.css
@@ -40,7 +40,6 @@
 }
 
 .tabela {
-  display: none; /* Hidden by default */
   background-color: #f9f9f9;
   border: 1px solid #ddd;
   border-radius: 5px;
@@ -88,6 +87,11 @@
   padding: 10px 20px 10px 20px;
   margin: 4rem 0;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.active {
+  display: flex;
+  flex-direction: row-reverse;
 }
 
 .products-card-majtas {
