--- a/electronics/src/components/Home-page/Navbar/navElem.css
+++ b/electronics/src/components/Home-page/Navbar/navElem.css
@@ -1,4 +1,4 @@
-
+/* style for component navpopup */
 .perdja-zeze {
   width: 100%;
   height: 975px;
@@ -11,20 +11,35 @@
   top: 0px;
 }
 
-.hapPopUpMbeshtjellsi {
-  visibility: visible;
-  opacity: 1;
-  background-color: #3a86ff;
-  height: auto;
-  height: 94vh;
-}
-
 /* bacgroundi i zi te hapja e pop up-it */
 .hapPopUpPerdja {
   visibility: visible;
   opacity: 1;
   opacity: 80%;
 }
+.butonatDjathtas {
+  display: flex;
+  gap: 30px;
+}
+
+.butonatDjathtas>button,
+.butonatDjathtas>a {
+  border-radius: 100%;
+  border: none;
+  padding: 10px 15px;
+  text-decoration: none;
+  color: black;
+  font-size: 1.4rem;
+  font-weight: 900;
+  background-color: white;
+}
+
+.butonatDjathtas>a {
+  padding: 8px 15px;
+}
+/* style for component navpopup */
+
+/* style for compoentn popUpDyqani */
 
 .perdja-zeze-zgjidhDyqani {
   width: 99%;
@@ -50,6 +65,16 @@
   color: rgb(229, 229, 229);
 }
 
+.zgjidhDyqanin {
+  margin: 0;
+  padding: 0;
+}
+
+.zgjidhDyqanin>p {
+  font-size: 0.8rem;
+  font-weight: 200;
+}
+
 .dyqaniZgjedhur-btn {
   font-size: 1rem;
   font-weight: 600;
@@ -65,4 +90,50 @@
 .hapPopUpZgjidhDyqanin {
   visibility: visible;
   opacity: 1;
+}
+/* style for compoentn popUpDyqani */
+
+/* navelement component */
+.naviPosht {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4%;
+  padding: 10px 0;
+}
+
+.responsive-row {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+.responsive-row a {
+  padding-top: 16px;
+}
+
+.responsive-row img {
+  width: 75%;
+  height: auto;
+  padding-right: 30px;
+}
+
+.navbarKerkimi {
+  display: flex;
+  background-color: white;
+  width: 40%;
+  border-radius: 8px;
+  padding: 15px;
+}
+
+.navbarKerkimi>input,
+.navbarKerkimi>input:focus {
+  width: 100%;
+  outline: none;
+}
+
+.navbarKerkimi>button,
+.navbarKerkimi>input {
+  background-color: white;
+  border: none;
 }
